fixed horizontal align for score

--- a/public/css/cherryclicker.css
+++ b/public/css/cherryclicker.css
@@ -1,8 +1,11 @@
 .vertical-center {
 	min-height: 100%;
-	min-height: 100vh;
 	display: flex;
 	align-items: center;
+	text-align: center;
+}
+
+.text-center {
 	text-align: center;
 }
 
